--- a/web/files/css/windows/settings_window.css
+++ b/web/files/css/windows/settings_window.css
@@ -50,6 +50,11 @@
     margin-right: 10px;
     margin-bottom: 20px;
     margin-left: 15px;
+    cursor: pointer;
+}
+
+.ChatSettingsOption {
+    cursor: pointer;
 }
 
 .pane-2-container {
